<resources>

    <string name="app_name">Evil Transfer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Evil Transfer</string>
    <string name="main_activity_server_title">Receive a File</string>
    <string name="path_label">Path</string>
    <string name="temp_path">/</string>
    <string name="browse_path_button">Browse</string>
    <string name="start_server_button">Start Server</string>
    <string name="stop_server_button">Stop Server</string>
    <string name="main_activity_client_title">Send a File</string>
    <string name="report">Report a Bug</string>
    <string name="start_recieve">Recieve</string>
    <string name="start_report">Report</string>
    <string name="start_client">Send</string>
    <string name="server_stopped">Server has stopped</string>
    <string name="server_running">Server is running</string>
    <string name="title_activity_file_browser">Browse File</string>
    <string name="file_browser_title">File Browser</string>
    <string name="peers_list">Search Results</string>
    <string name="title_activity_client">Send</string>

    <string name="client_title">Send a File</string>
    <string name="client_search">Search</string>
    <string name="client_send_file">Send</string>
    <string name="no_file_selected">No file selected to transfer</string>


    <string name="select_dir">Select Directory</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_recieve">Recieve</string>
    <string name="title_activity_evil">Evil Transfer</string>
    <string name="title_activity_main2">Evil Transfer</string>
    <string name="title_activity_server">Chat</string>
    <string name="title_activity_message">Chat</string>

</resources>