<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_activity_server_title"
            android:textSize="24dp"
            tools:context=".MainActivity" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path_label"
                tools:context=".MainActivity" />

            <EditText
                android:id="@+id/server_file_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:hint="@string/temp_path" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startFileBrowseActivity"
                android:text="@string/browse_path_button" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startServer"
                android:text="@string/start_server_button" />

            <Button
                android:id="@+id/buttonstop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="stopServer"
                android:text="@string/stop_server_button" />

            <Button
                android:id="@+id/buttonstop1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startMessageActivity"
                android:text="Chat" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Status"
            android:textSize="24dp"
            tools:context=".MainActivity" />

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/server_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/server_stopped"
            tools:context=".Recieve" />

        <TextView
            android:id="@+id/server_wifi_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            tools:context=".Recieve" />

        <TextView
            android:id="@+id/server_status_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            tools:context=".Recieve" />

        <TextView
            android:id="@+id/server_file_transfer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            tools:context=".Recieve" />


    </LinearLayout>

</LinearLayout>


